Personal Banker Info Table
Table with Dummy Data

--- a/SE/PersonalinfoBanker.html
+++ b/SE/PersonalinfoBanker.html
@@ -77,102 +77,21 @@
     </nav>
  <main>
   <div class="left-side">
-    <h2>Personal Information</h2>
-    <table>
-      <tbody>
+    <div class="left-side">
+      <h2>Personal Information</h2>
+      <table>
+        <thead>
         <tr>
-          <th>
-            <div class="dropdown">
-              First Name &#9662;
-              <div class="dropdown-menu">
-                <div class="dropdown-content">
-                  <!-- Dummy data for First Name dropdown -->
-                  <p>John</p>
-                  <p>Sarah</p>
-                  <p>Michael</p>
-                </div>
-              </div>
-            </div>
-          </th>
-          <th>
-            <div class="dropdown">
-              Last Name &#9662;
-              <div class="dropdown-menu">
-                <div class="dropdown-content">
-                  <!-- Dummy data for Last Name dropdown -->
-                  <p>Doe</p>
-                  <p>Smith</p>
-                  <p>Johnson</p>
-                </div>
-              </div>
-            </div>
-          </th>
-          <th>
-            <div class="dropdown">
-              Date of Birth &#9662;
-              <div class="dropdown-menu">
-                <div class="dropdown-content">
-                  <!-- Dummy data for Date of Birth dropdown -->
-                  <p>1985-01-01</p>
-                  <p>1990-05-15</p>
-                  <p>1978-11-30</p>
-                </div>
-              </div>
-            </div>
-          </th>
-          <th>
-            <div class="dropdown">
-              Nationality &#9662;
-              <div class="dropdown-menu">
-                <div class="dropdown-content">
-                  <!-- Dummy data for Nationality dropdown -->
-                  <p>Egyptian</p>
-                  <p>American</p>
-                  <p>British</p>
-                </div>
-              </div>
-            </div>
-          </th>
-          <th>
-            <div class="dropdown">
-              Address &#9662;
-              <div class="dropdown-menu">
-                <div class="dropdown-content">
-                  <!-- Dummy data for Address dropdown -->
-                  <p>Cairo, Egypt</p>
-                  <p>New York, USA</p>
-                  <p>London, UK</p>
-                </div>
-              </div>
-            </div>
-          </th>
-          <th>
-            <div class="dropdown">
-              National ID &#9662;
-              <div class="dropdown-menu">
-                <div class="dropdown-content">
-                  <!-- Dummy data for National ID dropdown -->
-                  <p>123456789</p>
-                  <p>987654321</p>
-                  <p>456789123</p>
-                </div>
-              </div>
-            </div>
-          </th>
-          <th>
-            <div class="dropdown">
-              User ID &#9662;
-              <div class="dropdown-menu">
-                <div class="dropdown-content">
-                  <!-- Dummy data for User ID dropdown -->
-                  <p>101</p>
-                  <p>202</p>
-                  <p>303</p>
-                </div>
-              </div>
-            </div>
-          </th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Date of Birth</th>
+          <th>Nationality</th>
+          <th>Address</th>
+          <th>National ID</th>
+          <th>User ID</th>
         </tr>
+        </thead>
+        <tbody>
         <tr>
           <td>Omar</td>
           <td>El Seweidy</td>
@@ -182,12 +101,124 @@
           <td>0203045739218527</td>
           <td>1022174628</td>
         </tr>
-        <!-- Repeat the data for other rows -->
-      </tbody>
-    </table>
+        <tr>
+          <td>Ahmed</td>
+          <td>Hassan</td>
+          <td>8/12/1995</td>
+          <td>Egyptian</td>
+          <td>Cairo, Egypt</td>
+          <td>0321987654321098</td>
+          <td>2087745612</td>
+        </tr>
+        <tr>
+          <td>Sarah</td>
+          <td>Smith</td>
+          <td>11/25/1988</td>
+          <td>American</td>
+          <td>New York, USA</td>
+          <td>9876543210123456</td>
+          <td>3078012345</td>
+        </tr>
+        <tr>
+          <td>John</td>
+          <td>Doe</td>
+          <td>6/10/1990</td>
+          <td>British</td>
+          <td>London, UK</td>
+          <td>5432109876543210</td>
+          <td>4097123456</td>
+        </tr>
+        <tr>
+          <td>Maria</td>
+          <td>Garcia</td>
+          <td>9/18/1993</td>
+          <td>Spanish</td>
+          <td>Madrid, Spain</td>
+          <td>1234567890123456</td>
+          <td>6150978632</td>
+        </tr>
+        <tr>
+          <td>Ahmed</td>
+          <td>Saleh</td>
+          <td>2/5/1985</td>
+          <td>Egyptian</td>
+          <td>Tanta, Egypt</td>
+          <td>9876543210987654</td>
+          <td>5096287412</td>
+        </tr>
+        <tr>
+          <td>Leila</td>
+          <td>Mohamed</td>
+          <td>7/20/1992</td>
+          <td>Egyptian</td>
+          <td>Sharm El-Sheikh, Egypt</td>
+          <td>4567890123456789</td>
+          <td>7078901234</td>
+        </tr>
+        <tr>
+          <td>Khaled</td>
+          <td>Abdelaziz</td>
+          <td>12/15/1989</td>
+          <td>Egyptian</td>
+          <td>Mansoura, Egypt</td>
+          <td>5432109876543210</td>
+          <td>3087654321</td>
+        </tr>
+        <tr>
+          <td>Mona</td>
+          <td>Ibrahim</td>
+          <td>3/8/1998</td>
+          <td>Egyptian</td>
+          <td>Hurghada, Egypt</td>
+          <td>4567890123456789</td>
+          <td>9087213456</td>
+        </tr>
+        <tr>
+          <td>Aya</td>
+          <td>Hassan</td>
+          <td>9/29/1991</td>
+          <td>Egyptian</td>
+          <td>Shubra El-Kheima, Egypt</td>
+          <td>6543210987654321</td>
+          <td>1122334455</td>
+        </tr>
+
+
+        <tr>
+          <td>Salma</td>
+          <td>Morsy</td>
+          <td>12/27/1999</td>
+          <td>Egyptian</td>
+          <td>Minya, Egypt</td>
+          <td>1234567890123456</td>
+          <td>9865432170</td>
+        </tr>
+        <tr>
+          <td>Youssef</td>
+          <td>Mohamed</td>
+          <td>9/14/1998</td>
+          <td>Egyptian</td>
+          <td>Qena, Egypt</td>
+          <td>9876543210987654</td>
+          <td>1234509876</td>
+        </tr>
+        <tr>
+          <td>Amira</td>
+          <td>Abdelhamid</td>
+          <td>4/22/1997</td>
+          <td>Egyptian</td>
+          <td>Fayoum, Egypt</td>
+          <td>3456789012345678</td>
+          <td>6789123456</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+
   </div>
-  <!-- Rest of the code... -->
-</main>
+
+
+ </main>
 
   <footer>
     <p>&copy; 2023 ABGBank. All rights reserved.</p>
