--- a/SE/PersonalinfoBanker.html
+++ b/SE/PersonalinfoBanker.html
@@ -75,63 +75,151 @@
 
       </ul>
     </nav>
-  <main>
+ <main>
+  <div class="left-side">
     <div class="left-side">
       <h2>Personal Information</h2>
       <table>
+        <thead>
+        <tr>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Date of Birth</th>
+          <th>Nationality</th>
+          <th>Address</th>
+          <th>National ID</th>
+          <th>User ID</th>
+        </tr>
+        </thead>
         <tbody>
-          <tr>
-            <th>First Name</th>
-            <td>Omar</td>
-          </tr>
-          <tr>
-            <th>Last Name</th>
-            <td>El Seweidy</td>
-          </tr>
-          <tr>
-            <th>Date of Birth</th>
-            <td>4/3/2002</td>
-          </tr>
-          <tr>
-            <th>Nationality</th>
-            <td>Egyptian</td>
-          </tr>
-          <tr>
-            <th>Address</th>
-            <td>El Sheikh Zayed, Giza, Egypt</td>
-          </tr>
-          <tr>
-            <th>National ID</th>
-            <td>0203045739218527</td>
-          </tr>
-          <tr>
-            <th>User ID</th>
-            <td>1022174628</td>
-          </tr>
+        <tr>
+          <td>Omar</td>
+          <td>El Seweidy</td>
+          <td>4/3/2002</td>
+          <td>Egyptian</td>
+          <td>El Sheikh Zayed, Giza, Egypt</td>
+          <td>0203045739218527</td>
+          <td>1022174628</td>
+        </tr>
+        <tr>
+          <td>Ahmed</td>
+          <td>Hassan</td>
+          <td>8/12/1995</td>
+          <td>Egyptian</td>
+          <td>Cairo, Egypt</td>
+          <td>0321987654321098</td>
+          <td>2087745612</td>
+        </tr>
+        <tr>
+          <td>Sarah</td>
+          <td>Smith</td>
+          <td>11/25/1988</td>
+          <td>American</td>
+          <td>New York, USA</td>
+          <td>9876543210123456</td>
+          <td>3078012345</td>
+        </tr>
+        <tr>
+          <td>John</td>
+          <td>Doe</td>
+          <td>6/10/1990</td>
+          <td>British</td>
+          <td>London, UK</td>
+          <td>5432109876543210</td>
+          <td>4097123456</td>
+        </tr>
+        <tr>
+          <td>Maria</td>
+          <td>Garcia</td>
+          <td>9/18/1993</td>
+          <td>Spanish</td>
+          <td>Madrid, Spain</td>
+          <td>1234567890123456</td>
+          <td>6150978632</td>
+        </tr>
+        <tr>
+          <td>Ahmed</td>
+          <td>Saleh</td>
+          <td>2/5/1985</td>
+          <td>Egyptian</td>
+          <td>Tanta, Egypt</td>
+          <td>9876543210987654</td>
+          <td>5096287412</td>
+        </tr>
+        <tr>
+          <td>Leila</td>
+          <td>Mohamed</td>
+          <td>7/20/1992</td>
+          <td>Egyptian</td>
+          <td>Sharm El-Sheikh, Egypt</td>
+          <td>4567890123456789</td>
+          <td>7078901234</td>
+        </tr>
+        <tr>
+          <td>Khaled</td>
+          <td>Abdelaziz</td>
+          <td>12/15/1989</td>
+          <td>Egyptian</td>
+          <td>Mansoura, Egypt</td>
+          <td>5432109876543210</td>
+          <td>3087654321</td>
+        </tr>
+        <tr>
+          <td>Mona</td>
+          <td>Ibrahim</td>
+          <td>3/8/1998</td>
+          <td>Egyptian</td>
+          <td>Hurghada, Egypt</td>
+          <td>4567890123456789</td>
+          <td>9087213456</td>
+        </tr>
+        <tr>
+          <td>Aya</td>
+          <td>Hassan</td>
+          <td>9/29/1991</td>
+          <td>Egyptian</td>
+          <td>Shubra El-Kheima, Egypt</td>
+          <td>6543210987654321</td>
+          <td>1122334455</td>
+        </tr>
+
+
+        <tr>
+          <td>Salma</td>
+          <td>Morsy</td>
+          <td>12/27/1999</td>
+          <td>Egyptian</td>
+          <td>Minya, Egypt</td>
+          <td>1234567890123456</td>
+          <td>9865432170</td>
+        </tr>
+        <tr>
+          <td>Youssef</td>
+          <td>Mohamed</td>
+          <td>9/14/1998</td>
+          <td>Egyptian</td>
+          <td>Qena, Egypt</td>
+          <td>9876543210987654</td>
+          <td>1234509876</td>
+        </tr>
+        <tr>
+          <td>Amira</td>
+          <td>Abdelhamid</td>
+          <td>4/22/1997</td>
+          <td>Egyptian</td>
+          <td>Fayoum, Egypt</td>
+          <td>3456789012345678</td>
+          <td>6789123456</td>
+        </tr>
         </tbody>
       </table>
     </div>
-   <div class="right-side">
-  <div class="buttons">
-    <label for="address-input">New Address:</label>
-    <input type="text" id="address-input" class="textbox" placeholder="Enter new address">
-    <button class="AddressButton">Update Address</button>
-  </div>
-  <div class="buttons">
-    <label for="issue-input">Report Issue:</label>
-    <textarea id="issue-input" class="textbox" placeholder="Enter your issue"></textarea>
-    <button class="ReportButton">Report Issue</button>
-  </div>
-  <div class="buttons">
-    <button class="RequestButton">Send Bank Statement Request</button>
-  </div>
-</div>
 
-    <div style="clear: both;"></div>
-	<div class="banner" id="personalInfo-banner">
-  <span class="banner-text" id="personalInfo-banner-text"></span>
-</div>
-  </main>
+  </div>
+
+
+ </main>
+
   <footer>
     <p>&copy; 2023 ABGBank. All rights reserved.</p>
   </footer>  
@@ -167,8 +255,10 @@ document.addEventListener("DOMContentLoaded", function() {
   });
   
   });
-  
-  
+  });
+
+
+
 </script>
 </body>
 </html>
