--- a/SE/HomeHome.html
+++ b/SE/HomeHome.html
@@ -93,7 +93,7 @@
         }
 
         .logo2 {
-            margin-right: 10px;
+            margin-right: 20px;
         }
 
         zw
@@ -110,7 +110,7 @@
       <img src="SE/logo.png" alt="Logo">
     </div>
 	
-    <h1>GUCBank</h1>
+    <h1>ABG Bank</h1>
 	 
   </header>
   <nav>
@@ -123,8 +123,8 @@
   <div class="container">
     <div class="message">
       <h2>Welcome to The ABG Website</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet nunc ac tellus posuere mollis. Mauris sagittis iaculis purus vel venenatis. Fusce consectetur lectus quis ligula lobortis, nec finibus nunc pulvinar. Phasellus sed nibh sapien. Etiam a lacus condimentum, commodo nulla in, accumsan libero. Sed vel ultrices leo. Nam ultrices tristique pharetra.</p>
-      <p>Quisque nec ex eget lacus viverra tincidunt a id risus. Sed elementum iaculis ligula eget feugiat. Ut tristique felis nec eros dictum, id pellentesque enim pulvinar. Duis nec varius elit, vel congue nisl. Donec tincidunt orci et ante hendrerit rutrum.</p>
+      <p>ABG, just like the cattle egret, prides itself on being the farmer's bestfriend. Never forgetting the humble beginnings from which ABG was established our team continues to uphold an unparalleled work ethic and business philosphy.  </p>
+      <p>ABG offers a full range of financial products and services to individuals with heightened focus on financial support and bill payment performance </p>
       <p>Thank you for visiting the ABG website. If you have any questions or need assistance, feel free to contact customer support.</p>
     </div>
     <div class="logo">
@@ -135,7 +135,7 @@
     <button onclick="redirectToPage()" class="custom-button">Sign Up / Log In</button>
   </div>
    <footer>
-    <p>&copy; 2023 GUCBank. All rights reserved.</p>
+    <p>&copy; 2023 ABGBank. All rights reserved.</p>
   </footer>
    
 
