--- a/SE/AdminPage.html
+++ b/SE/AdminPage.html
@@ -85,11 +85,11 @@
             <li><a href="Personalinfo_admin.html">Personal Information</a></li>
             <li><a href="Liabilities_admin.html">Liabilities</a></li>
             <li><a href="Balance_admin.html">Balance</a></li>
-            <li><a href="Complaints.html">Complaints</a></li>
           </ul>
         </li>
         <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
         	 <li><a href="Bills_admin.html">Bills</a></li>
+           <li><a href="Complaints_admin.html">Complaints</a></li>
         <li><a href="Transfers_history.html" id="transfers">Transfers</a></li>
       </ul>
    </nav>
