--- a/SE/Complaints_admin.html
+++ b/SE/Complaints_admin.html
@@ -66,13 +66,12 @@
             <li><a href="Personalinfo_admin.html">Personal Information</a></li>
             <li><a href="Liabilities_admin.html">Liabilities</a></li>
             <li><a href="Balance_admin.html">Balance</a></li>
-			
           </ul>
         </li>
 		 <li><a href="Transfer.html">Transfer</a></li>
 		  <li><a href="Bills_admin.html">Bills</a></li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
-
+    <li> <a href="Complaints_admin.html">Complaints</a></li>
       </ul>
     </nav>
  <main>
