--- a/SE/BankerPersonalinfo.html
+++ b/SE/BankerPersonalinfo.html
@@ -60,19 +60,19 @@
   </header>
    <nav>
       <ul class="menu">
-        <li><a href="ClientPage.html" id="home">Home</a></li>
+        <li><a href="BankerPage.html" id="home">Home</a></li>
         <li><a href="ContactUs.html" id="contact">Contact</a></li>
         <li class="dropdown">
           <a href="#" id="my-account">My Account &#9662;</a>
           <ul class="dropdown-menu">
-            <li><a href="Personalinfo.html">Personal Information</a></li>
-            <li><a href="Liabilities.html">Liabilities</a></li>
-            <li><a href="Balance.html">Balance</a></li>
+            <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
+            <li><a href="LiabilitiesBanker.html">Liabilities</a></li>
+            <li><a href="BalanceBanker.html">Balance</a></li>
 			
           </ul>
         </li>
 		 <li><a href="Transfer.html">Transfer</a></li>
-		  <li><a href="Bills.html">Bills</a></li>
+		  <li><a href="BillsBanker.html">Bills</a></li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
 
       </ul>
@@ -135,7 +135,7 @@
 </div>
   </main>
   <footer>
-    <p>&copy; 2023 GUCBank. All rights reserved.</p>
+    <p>&copy; 2023 ABGBank. All rights reserved.</p>
   </footer>  
   <script src="script.js"></script>
 <script>
@@ -143,8 +143,6 @@
 document.addEventListener("DOMContentLoaded", function(){
   // getting elements of specified class 
   var AddressButton = document.querySelector('.AddressButton');
-  var RequestButton = document.querySelector('.RequestButton');
-  var ReportButton = document.querySelector('.ReportButton');
   var banner = document.getElementById('personalInfo-banner');
   var bannerText = document.getElementById('personalInfo-banner-text');
 
