--- a/SE/BankerPersonalinfo.html
+++ b/SE/BankerPersonalinfo.html
@@ -84,31 +84,31 @@
         <tbody>
           <tr>
             <th>First Name</th>
-            <td>Omar</td>
+            <td>John</td>
           </tr>
           <tr>
             <th>Last Name</th>
-            <td>El Seweidy</td>
+            <td>Doe</td>
           </tr>
           <tr>
             <th>Date of Birth</th>
-            <td>4/3/2002</td>
+            <td>1/1/1990</td>
           </tr>
           <tr>
             <th>Nationality</th>
-            <td>Egyptian</td>
+            <td>United States</td>
           </tr>
           <tr>
             <th>Address</th>
-            <td>El Sheikh Zayed, Giza, Egypt</td>
+            <td>123 Main Street, Anytown, USA</td>
           </tr>
           <tr>
             <th>National ID</th>
-            <td>0203045739218527</td>
+            <td>1234567890</td>
           </tr>
           <tr>
             <th>User ID</th>
-            <td>1022174628</td>
+            <td>john.doe123</td>
           </tr>
         </tbody>
       </table>
