--- a/SE/BankerPersonalinfo.html
+++ b/SE/BankerPersonalinfo.html
@@ -48,7 +48,8 @@
         .buttons {
             margin-top: 10px;
         }
-    </style>
+    footer {     font-family: 'Roboto', sans-serif;     background-color: #81b29a;     padding: 10px;     text-align: center;     color: white;     position: relative ;     bottom: 0%;     left: 0;     width: 99%;     height: 35px;  }
+	</style>
 </head>
 <body>
   <header>
@@ -124,10 +125,7 @@
   <span class="banner-text" id="personalInfo-banner-text"></span>
 </div>
   </main>
-  <footer>
-   
-	  
-	  
+  <footer>  
 	  <p>&copy; 2023 ABGBank. All rights reserved.</p>
   </footer>  
   <script src="script.js"></script>
