--- a/SE/BankerPersonalinfo.html
+++ b/SE/BankerPersonalinfo.html
@@ -48,7 +48,7 @@
         .buttons {
             margin-top: 10px;
         }
-    footer {     font-family: 'Roboto', sans-serif;     background-color: #81b29a;     padding: 10px;     text-align: center;     color: white;     position: relative ;     bottom: 0%;     left: 0;     width: 99%;     height: 35px;  }
+    footer {     font-family: 'Roboto', sans-serif;     background-color: #81b29a;     padding: 10px;     text-align: center;     color: white;     position: absolute ;     bottom: 0%;     left: 0;     width: 99%;     height: 35px;  }
 	</style>
 </head>
 <body>
