--- a/SE/Balance_Banker.html
+++ b/SE/Balance_Banker.html
@@ -87,7 +87,7 @@
       right: 20px;
       font-weight: bold;
     }
- footer {     font-family: 'Roboto', sans-serif;     background-color: #81b29a;     padding: 10px;     text-align: center;     color: white;     position: relative ;     bottom: 0%;     left: 0;     width: 99%;     height: 35px;  }
+ footer {     font-family: 'Roboto', sans-serif;     background-color: #81b29a;     padding: 10px;     text-align: center;     color: white;     position: absolute ;     bottom: 0%;     left: 0;     width: 99%;     height: 35px;  }
 	</style>
 </head>
 <body>
