--- a/SE/Bills_Banker.html
+++ b/SE/Bills_Banker.html
@@ -74,7 +74,7 @@
       border: none;
       cursor: pointer;
     }
-  footer {     font-family: 'Roboto', sans-serif;     background-color: #81b29a;     padding: 10px;     text-align: center;     color: white;     position: relative ;     bottom: 0%;     left: 0;     width: 99%;     height: 35px;  }
+  footer {     font-family: 'Roboto', sans-serif;     background-color: #81b29a;     padding: 10px;     text-align: center;     color: white;     position: absolute ;     bottom: 0%;     left: 0;     width: 99%;     height: 35px;  }
 	</style>
 </head>
 <body>
