--- a/SE/BankerPersonalinfo.html
+++ b/SE/BankerPersonalinfo.html
@@ -119,7 +119,11 @@
     <label for="address-input">New Address:</label>
     <input type="text" id="address-input" class="textbox" placeholder="Enter new address">
     <button class="AddressButton">Update Address</button>
-  </div>
+    <label for="user-id-input">Insert User ID:</label>
+    <input type="text" id="user-id-input" class="textbox" placeholder="Enter User ID">
+    <button type="button" class="close-account-button">Close Account</button>
+
+	   </div>
     <div style="clear: both;"></div>
 	<div class="banner" id="personalInfo-banner">
   <span class="banner-text" id="personalInfo-banner-text"></span>
