--- a/SE/BankerPersonalinfo.html
+++ b/SE/BankerPersonalinfo.html
@@ -119,7 +119,7 @@
     <label for="address-input">New Address:</label>
     <input type="text" id="address-input" class="textbox" placeholder="Enter new address">
     <button class="AddressButton">Update Address</button>
-    <label for="user-id-input">Insert User ID:</label>
+    <label for="user-id-input">User ID:</label>
     <input type="text" id="user-id-input" class="textbox" placeholder="Enter User ID">
     <button type="button" class="close-account-button">Close Account</button>
 
