--- a/SE/BankerPersonalinfo.html
+++ b/SE/BankerPersonalinfo.html
@@ -116,10 +116,8 @@
     </div>
    <div class="right-side">
   <div class="buttons">
-    <label for="address-input">New Address:</label>
     <input type="text" id="address-input" class="textbox" placeholder="Enter new address">
     <button class="AddressButton">Update Address</button>
-    <label for="user-id-input">Insert User ID:</label>
     <input type="text" id="user-id-input" class="textbox" placeholder="Enter User ID">
     <button type="button" class="close-account-button">Close Account</button>
 
@@ -128,6 +126,7 @@
 	<div class="banner" id="personalInfo-banner">
   <span class="banner-text" id="personalInfo-banner-text"></span>
 </div>
+   </div>
   </main>
   <footer>  
 	  <p>&copy; 2023 ABGBank. All rights reserved.</p>
